# hapax-py

./: .gitmodules  .mcp.json  README.md  README_ASSISTANT.md  hello.py  pyproject.toml
.cursor/: mcp.json
agent_docs/: 00_index.txt  01_hapax_overview.txt  02_operations_guide.txt  03_graph_building.txt  04_evaluation_monitoring.txt  05_implementation_patterns.txt  06_integration_guide.txt  07_troubleshooting.txt
docs/: api_reference.md  evaluation_decorators.md  examples.md  graph.md  guide.md  index.md  installation.md  openlit.md  openlit_integration.md  quickstart.md  troubleshooting.md
examples/: .env.example  advanced_pipeline.py  eval_decorator_examples.py  gpu_monitoring.py  hapax_assistant_example.py  hapax_demo.py  llm_pipeline.py  mock_evals.py  openlit_integration.py  type_check_test.py
hapax/: __init__.py  evaluations.py  monitoring.py
hapax/core/: __init__.py  base.py  decorators.py  example.py  flow.py  graph.py  models.py
hapax_docs/: README.md  SUMMARY.md  __init__.py  __main__.py  cli.py  cursor_setup.py  debug.py  indexer.py  models.py  prompts.py  pyproject.toml  resources.py  server.py  tools.py  version.py
tests/: test_evaluations.py  test_graph_evaluation.py  test_monitoring.py
