[project]
name = "hapax"
version = "0.1.4"
description = "A type-safe graph execution framework built on top of OpenLit for LLM pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "networkx>=3.0",
    "matplotlib>=3.0.0",
    "openai>=1.61.1",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "openlit>=1.33.8",
    "mcp>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hapax"]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0"
]
