[project]
name = "hapax-docs"
version = "0.1.0"
description = "Hapax Documentation Assistant MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.3.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hapax_docs"]

[project.scripts]
hapax-docs = "hapax_docs.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.0.0"
] 